Update azure-dev-pipelines.yml for Azure Pipelines

--- a/azure-dev-pipelines.yml
+++ b/azure-dev-pipelines.yml
@@ -23,7 +23,7 @@ steps:
   inputs:
     connectionType: 'OpenShift Connection Service'
     openshiftService: 'Openshift Connection'
-    cmd: 'start-build pytest-calculator --from-dir=/home/vsts/work/1/s --wait --follow'
+    cmd: 'start-build pytest-calculator --wait --follow'
     uselocalOc: true
   displayName: 'Start the Build'
 - task: oc-cmd@3
